Updates for java 11. Set version to 19