@@ -73,17 +73,51 @@
   </pluginRepositories>
   
   <properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.build.sourceVersion>10</project.build.sourceVersion>
-		<project.build.targetVersion>10</project.build.targetVersion>
- </properties>
+	<!-- Project settings -->
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.sourceVersion>11</project.build.sourceVersion>
+    <project.build.targetVersion>11</project.build.targetVersion>
+
+	<!-- Dependency versions -->
+    <ca.phon.phon-app.version>3.0.2-SNAPSHOT</ca.phon.phon-app.version>
+    
+    <!-- java.xml.bind -->
+	<jaxb.version>2.2.11</jaxb.version>
+	<javax.activation.activation.version>1.1.1</javax.activation.activation.version>
+    
+    <!-- Plugin versions -->
+    <org.apache.maven.plugins.maven-compiler-plugin.version>3.8.0</org.apache.maven.plugins.maven-compiler-plugin.version>
+ 	<org.codehaus.mojo.jaxb2-maven-plugin.version>2.4</org.codehaus.mojo.jaxb2-maven-plugin.version>
+  </properties>
   
   <dependencies>
       <dependency>
           <groupId>ca.phon</groupId>
           <artifactId>phon-app</artifactId>
-          <version>3.0.1-SNAPSHOT</version>
+          <version>${ca.phon.phon-app.version}</version>
       </dependency>
+      
+      <!-- java.xml.bind -->
+	<dependency>
+	    <groupId>javax.xml.bind</groupId>
+	    <artifactId>jaxb-api</artifactId>
+	    <version>${jaxb.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.sun.xml.bind</groupId>
+	    <artifactId>jaxb-core</artifactId>
+	    <version>${jaxb.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.sun.xml.bind</groupId>
+	    <artifactId>jaxb-impl</artifactId>
+	    <version>${jaxb.version}</version>
+	</dependency>
+	<dependency>
+	    <groupId>javax.activation</groupId>
+	    <artifactId>activation</artifactId>
+	    <version>${javax.activation.activation.version}</version>
+	</dependency>
   </dependencies>
   
   <build>
@@ -92,44 +126,30 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.7.0</version>
+        <version>${org.apache.maven.plugins.maven-compiler-plugin.version}</version>
         <configuration>
           <source>${project.build.sourceVersion}</source>
-		  <target>${project.build.targetVersion}</target>
-		  <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
-          <compilerArgs>
-				<arg>--add-modules</arg>
-				<arg>java.xml.bind</arg>
-			</compilerArgs>
+          <target>${project.build.targetVersion}</target>
+          <release>${project.build.targetVersion}</release>
+          <sourceEncoding>${project.build.sourceEncoding}</sourceEncoding>
         </configuration>
       </plugin>
       
       <!-- Generate source for xml schema -->
       <plugin>
-			<groupId>org.apache.cxf</groupId>
-			<artifactId>cxf-xjc-plugin</artifactId>
-			<version>3.2.2</version>
-			<configuration>
-				<extensions>
-					<extension>org.apache.cxf.xjcplugins:cxf-xjc-dv:3.2.2</extension>
-				</extensions>
-			</configuration>
+			<groupId>org.jvnet.jaxb2.maven2</groupId>
+			<artifactId>maven-jaxb2-plugin</artifactId>
 			<executions>
 				<execution>
-					<id>generate-sources</id>
-					<phase>generate-sources</phase>
+					<id>generate</id>
 					<goals>
-						<goal>xsdtojava</goal>
+						<goal>generate</goal>
 					</goals>
 					<configuration>
-						<sourceRoot>${basedir}/target/generated-sources/xjc</sourceRoot>
-						<xsdOptions>
-							<xsdOption>
-								<xsd>${basedir}/src/main/resources/xml/xsd/CSVImport.xsd</xsd>
-								<packagename>ca.phon.csv2phon.io</packagename>
-								<bindingFile>${basedir}/src/main/resources/xml/xjb/CSVImport.xjb</bindingFile>
-							</xsdOption>
-						</xsdOptions>
+						<schemaDirectory>src/main/resources/xml/xsd</schemaDirectory>
+						<bindingDirectory>src/main/resources/xml/xjb</bindingDirectory>
+						<specVersion>2.2</specVersion>
+						<extension>true</extension>
 					</configuration>
 				</execution>
 			</executions>
@@ -137,5 +157,5 @@
     </plugins>
   </build>
   
-  <version>18</version>
+  <version>19</version>
 </project>
